crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@repos__netbox-community-netbox__ee6cbdcefe1c522d718e880ea3f955e7683f2b9b__netbox__utilities__templatetags__form_helpers.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/netbox-community-netbox/ee6cbdcefe1c522d718e880ea3f955e7683f2b9b/netbox/utilities/templatetags/form_helpers.py
---
tag_rules:
  "netbox.utilities.templatetags.form_helpers::render_custom_fields":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: form
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "netbox.utilities.templatetags.form_helpers::render_errors":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: form
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "netbox.utilities.templatetags.form_helpers::render_field":
    arg_constraints:
      - Min: 2
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: field
        required: true
        kind: Variable
        position: 0
      - name: bulk_nullable
        required: false
        kind: Variable
        position: 1
      - name: label
        required: false
        kind: Variable
        position: 2
    supports_as_var: false
  "netbox.utilities.templatetags.form_helpers::render_fieldset":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: form
        required: true
        kind: Variable
        position: 0
      - name: fieldset
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
  "netbox.utilities.templatetags.form_helpers::render_form":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: form
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities:
  "netbox.utilities.templatetags.form_helpers::getfield":
    expects_arg: true
    arg_optional: false
  "netbox.utilities.templatetags.form_helpers::widget_type":
    expects_arg: false
    arg_optional: false
block_specs: {}
