crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@repos__netbox-community-netbox__ee6cbdcefe1c522d718e880ea3f955e7683f2b9b__netbox__utilities__templatetags__perms.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/netbox-community-netbox/ee6cbdcefe1c522d718e880ea3f955e7683f2b9b/netbox/utilities/templatetags/perms.py
---
tag_rules: {}
filter_arities:
  "netbox.utilities.templatetags.perms::can_add":
    expects_arg: true
    arg_optional: false
  "netbox.utilities.templatetags.perms::can_change":
    expects_arg: true
    arg_optional: false
  "netbox.utilities.templatetags.perms::can_delete":
    expects_arg: true
    arg_optional: false
  "netbox.utilities.templatetags.perms::can_run":
    expects_arg: true
    arg_optional: false
  "netbox.utilities.templatetags.perms::can_sync":
    expects_arg: true
    arg_optional: false
  "netbox.utilities.templatetags.perms::can_view":
    expects_arg: true
    arg_optional: false
block_specs: {}
